--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       # 矩阵功能，为每个包构建
       matrix:
-        flavor: [ default, termux ]
+        flavor: [ 默认, termux ]
 
     steps:
     - uses: actions/checkout@v4
@@ -54,6 +54,6 @@ jobs:
       with:
         body_path: changlog/${{ env.TAG_VERSION_NAME }}/README.md
         tag_name: ${{ env.TAG_VERSION_NAME }}
-        repository: neu233/AIDE-Plus-AS
+        repository: Familyye/AIDE-Plus-AS1
         files: build/app/outputs/apk/${{ matrix.flavor }}/release/AIDE-${{ matrix.flavor }}.apk
         token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
