--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ captures/
 .idea/navEditor.xml
 .idea/compiler.xml
 .idea/misc.xml
+.idea
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -107,3 +108,4 @@ build
 .build
 build-logic/build/
 build-logic/.gradle
+/.idea/
