--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -131,6 +131,8 @@ googleDagge = "2.55"
 devtoolsKsp = "2.1.20-2.0.1"
 androidx-benchmark-macro = "1.3.4"
 uiTextGoogleFonts = "1.8.1"
+activity = "1.8.0"
+recyclerview = "1.3.0"
 
 
 [libraries]
@@ -379,6 +381,8 @@ androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-te
 com-github-promeg-tinypinyin = { module = "com.github.promeg:tinypinyin", version.ref = "com-github-promeg-tinypinyin" }
 com-github-promeg-tinypinyin-lexicons-android-cncity = { module = "com.github.promeg:tinypinyin-lexicons-android-cncity", version.ref = "com-github-promeg-tinypinyin" }
 com-github-promeg-tinypinyin-lexicons-java-cncity = { module = "com.github.promeg:tinypinyin-lexicons-java-cncity", version.ref = "com-github-promeg-tinypinyin" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 
 
 [plugins]
